# Reflections

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test.db
migrations/versions/: 036235d3942d_init.py  38334c70a979_init.py  38578059a29c_init.py  930f69da9bfa_init.py  b03d18acbd7d_init.py  d363d7d98bdf_init.py  eb9a1291255e_init.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: comments.py  photos.py  rate.py  tags.py  users.py
src/routes/: admin_routes.py  auth.py  photos.py  rate.py  users_routes.py
src/services/: auth.py  email.py  roles.py
tests/: rest_unit_repository_photos.py  test_unit_repository_comments.py  test_unit_repository_rate.py  test_unit_repository_tags.py  test_unit_repository_users.py
